; ModuleID = '/home/carl/AnghaBench/postgres/contrib/postgres_fdw/extr_postgres_fdw.c_close_cursor.c'
source_filename = "/home/carl/AnghaBench/postgres/contrib/postgres_fdw/extr_postgres_fdw.c_close_cursor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [10 x i8] c"CLOSE c%u\00", align 1
@PGRES_COMMAND_OK = common dso_local global i64 0, align 8
@ERROR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32)* @close_cursor to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @close_cursor(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca [64 x i8], align 16
  %6 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = getelementptr inbounds [64 x i8], [64 x i8]* %5, i64 0, i64 0
  %8 = load i32, i32* %4, align 4
  %9 = call i32 @snprintf(i8* %7, i32 64, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i32 %8)
  %10 = load i32*, i32** %3, align 8
  %11 = getelementptr inbounds [64 x i8], [64 x i8]* %5, i64 0, i64 0
  %12 = call i32* @pgfdw_exec_query(i32* %10, i8* %11)
  store i32* %12, i32** %6, align 8
  %13 = load i32*, i32** %6, align 8
  %14 = call i64 @PQresultStatus(i32* %13)
  %15 = load i64, i64* @PGRES_COMMAND_OK, align 8
  %16 = icmp ne i64 %14, %15
  br i1 %16, label %17, label %23

17:                                               ; preds = %2
  %18 = load i32, i32* @ERROR, align 4
  %19 = load i32*, i32** %6, align 8
  %20 = load i32*, i32** %3, align 8
  %21 = getelementptr inbounds [64 x i8], [64 x i8]* %5, i64 0, i64 0
  %22 = call i32 @pgfdw_report_error(i32 %18, i32* %19, i32* %20, i32 1, i8* %21)
  br label %23

23:                                               ; preds = %17, %2
  %24 = load i32*, i32** %6, align 8
  %25 = call i32 @PQclear(i32* %24)
  ret void
}

declare dso_local i32 @snprintf(i8*, i32, i8*, i32) #1

declare dso_local i32* @pgfdw_exec_query(i32*, i8*) #1

declare dso_local i64 @PQresultStatus(i32*) #1

declare dso_local i32 @pgfdw_report_error(i32, i32*, i32*, i32, i8*) #1

declare dso_local i32 @PQclear(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
